--- a/pinyin4j/build.gradle
+++ b/pinyin4j/build.gradle
@@ -6,3 +6,6 @@ java {
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
 }
+
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.glowinthedark'
